--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,22 @@
 @font-face {
-    font-family: benmono;
-    src: url(../fonts/benmono/BenmonoLiane-0W0or.ttf);
-    src: url(../fonts/benmono/BenmonoLiane-0W0or.otf);
+    font-family: kanit;
+    src: url(../fonts/kanit/Kanit-Regular.ttf);
+}
+
+@font-face{
+    font-family: bebas;
+    src: url(../fonts/bebasNeue/BebasNeue-Regular.ttf);
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: kanit;
 }
 
 body {
-    background-color: rgb(253, 245, 245);
+    background-color: #ccc;
     overflow-x: hidden;
 }
 
@@ -39,238 +50,239 @@ a{
         visibility: hidden;
     }
 }
-/*Arriere plan*/
-/* .bg-green {
-    background-color: #047b3a !important;
-} */
 
-.bg-green {
-    background-color: #C6E6D4 !important;
-}
-/*Texte*/
-.text-color-green {
-    color: #29b766;
+/* Menu de navigation */
+.menu{
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    
 }
 
-/* Button */
-
-.btn-green {
-    font-size: 18px;
-    color: #bbf5d4;
-    background-color: #29b766;
-    border-color: #29b766;
+.nav-logo,
+.nav-logo:hover{
+    font-size: 32px;
+    font-family: bebas;
+    color: rgb(126, 245, 58);
 }
 
-.btn-green:hover {
-    color: #fff;
-    background-color: #29f56dcb;
-    border-color: #29f56d;
-}
-
-/*Lien*/
-
-nav .link-green{
-    font-weight: 700 !important;
-}
-
-.link-green {
-    color: #29b766;
-  }
-  
-  .link-green:hover, .link-green:focus {
-    color: #51d07c;
-  }
-
-/*Logo ZOE*/
-.logo-zoe{
-    height: 62px;
-    width: 100px;
-}
-
-/*Slider*/
-.slide-img .slide-img-box{
-height: 375px;
-width: auto;
-}
-
-.slide-img .slide-img-box::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(225deg,#0f0f0f,#000000);
-    z-index: 1;
-    mix-blend-mode: screen;
-}
-
-.slide-img .slide-img-box img{
-    width: 100%;
-    height: 100%;
-}
-
-.carousel-text{
-    font-size: 42px;
-    color: #FF6702 !important;
-}
-
-.carousel-text-description{
-    font-size: 20px;
-}
-.carousel-text-green{
-    color: #C6E6D4 !important;
-}
-
-.carousel-text-black{
-    color: #111 !important;
-}
-
-/* .slider-zoe-caption {
-    position: absolute;
-    right: 15%;
-    bottom: 1.25rem;
-    left: 15%;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-    color: #fff;
-    text-align: center;
-} */
-
-
-/* Card */
-.card img{
-    width: 354px;
-    height: 212px;
-}
-
-/* Formulaire reservation index */
-.form-reservation{
-    margin: 20px 0;
-    padding: 30px;
-    background-color: #C6E6D4 !important;
-    border-radius: 10px;
-}
-
-.title-reservation{
-    font-size: 28px;
-    letter-spacing: 4px;
-}
-
-.form-group{
-    margin-bottom: 15px;
-}
-
-.form-group label{
-    color: rgba(88, 88, 88, 0.808);
-    margin-bottom: 5px;
-}
-
-
-/* Decouverte */
-.title-dec{
-    font-size: 36px;
-    text-transform: uppercase;
-    font-weight: 600;
+.nav-list{
+    margin-right: 30px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.title-decouverte{
-    font-size: 28px;
+.nav-list .nav-link-zoe{
+    color: #111;
+    font-size: 22px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
 }
 
-.title-decouverte span{
-    letter-spacing: 2px;
-    font-size: 30px;
-    font-weight: 700;
-}
-
-.description-decouverte{
-    font-size: 20px;
-    color: rgb(104, 90, 90);
-}
-
-.img-decouverte{
-    max-width: 450px;
-    width: 100%;
-    border-radius: 15px;
+.nav-list .nav-link-zoe:hover,
+.nav-list .nav-link-zoe.active{
+    color: rgb(126, 245, 58);
 }
 
 
-
-.popular-destination .box{
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 290px;
-}
-
-.popular-destination .box img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.box .content{
+/* Banniere */
+.banniere{
     display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #fff;
-    text-align: center;
+    justify-content: center;
     align-items: center;
-    opacity: .8;
-    transform: translateX(100%);
-    transition: 0.5s;
+    height: 400px;
+    background-image: url('../img/slider/bus_2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow-y: hidden;
 }
 
-.box:hover .content{
-    transform: translateX(0);
+.banniere .content .title{
+    font-size: 36px;
+    font-weight: 600;
+    color: #fff;
 }
 
-.box .content h4 {
-    font-size: 25px;
-    margin-bottom: 10px;
-    font-weight: 500;
+.banniere .content .title .title-zoe{
+    color: rgb(126, 245, 58);
+    font-size: 50px;
+
 }
 
-.box .content p{
-    padding: 2px;
+.banniere .content .reservation{
+    display: flex;
+    justify-content: center;
+}
+
+.banniere .content .reservation .reservation-link{
+    margin-top: 20px;
+    line-height: 1.5;
+    letter-spacing: 2px;
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+    user-select: none;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(241, 96, 38);
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    transform: translateY(400%);
+    animation: fade-up 2.5s forwards;
+}
+
+@keyframes fade-up {
+    100%{
+        transform: translateY(50%);
+    }
+}
+
+.banniere .content .reservation .reservation-link:hover{
+    background-color: rgb(207, 64, 7);
+}
+
+
+/* Footer */
+
+.footer-title{
+    color: rgb(126, 245, 58);
+    margin-top: 10px;
+    margin-bottom: 10Px;
+    font-size: 20px;
+}
+
+.footer-description{
+    color: rgb(110, 108, 108);
     font-size: 16px;
 }
 
-/* Agence */
-.agence{
-    padding: 5px;
-    background: #fff;
-    border-radius: 10px;
-    margin: 5px;
-}
-
-.agence .agence-title{
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 600;
-    text-align: center;
-    border-bottom: 2px solid #29b766;
+.footer-description .footer-list{
     margin-bottom: 5px;
-    padding: 5px;
 }
 
-.agence .agence-contact{
-    margin-top: 15px;
-
-}
-
-.agence .agence-contact p{
-    font-size: 15px;
-    font-weight: 500;
-}
-
-.agence .agence-contact p span{
+.footer-link{
+    text-decoration: none;
     font-size: 17px;
+    color:rgb(110, 108, 108);
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+.footer-link:hover{
+    color: rgb(126, 245, 58);
+}
+
+
+.footer-form{
+    margin-top: 20px;
+}
+
+.footer-form form{
+    display: flex;
+}
+
+.footer-form .form-group label{
+    display: none;
+}
+
+.footer-form .form-group input{
+    padding: 10px;
+    border: 2px solid rgb(241, 96, 38);
+    outline: none;
+    border-radius: 0;
+}
+
+
+.footer-form .footer-submit button{
+    display: inline-block;
+    width: 120px;
+    height: 100%;
+    border: none;
+    background-color: rgb(241, 96, 38);
+    color: #fff;
+    font-size: 18px;
     font-weight: 600;
-    letter-spacing: 2px;
+}
+
+.footer-form .footer-submit button:hover{
+    background-color: rgb(207, 64, 7);
+}
+
+
+.copyright{
+    margin-top: 20px;
+    text-align: center;
+}
+
+.copyright p{
+    font-size: 14px;
+}
+
+
+/* Contact */
+.contact .title{
+    font-size: 28px;
+    font-weight: 600;
+    color: rgb(241, 96, 38);
+}
+
+.contact .description{
+    font-size: 15px;
+    color: rgb(26, 25, 25);
+    margin-bottom: 20px;
+}
+
+.form-contact{
+    margin-top: 10px;
+}
+
+.form-contact .form-group label{
+    display: none;
+}
+
+.form-contact .form-group textarea,
+.form-contact .form-group input[type=tel],
+.form-contact .form-group input[type=email],
+.form-contact .form-group input[type=text]{
+    border: none;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    border-radius: 5px;
+    outline: none;
+    resize: none;
+}
+
+.form-contact .form-group-check{
+    margin-left: 20px;
+}
+
+.form-contact .form-group-check label{
+    font-size: 15px;
+    font-weight: 600;
+    color: #221414;
+}
+
+.form-contact .form-submit button{
+    display: inline-block;
+    width: 200px;
+    height: 50px;
+    border: none;
+    background-color: rgb(241, 96, 38);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 15px;
+}
+
+.form-contact .form-submit button:hover{
+    background-color: rgb(207, 64, 7);
+}
+
+
+.address .min-title{
+    font-size: 20px;
+    color: rgb(241, 96, 38);
+}
+
+.address .min-desc{
+    font-size: 16px;
 }
