--- a/css/admin.css
+++ b/css/admin.css
@@ -20,6 +20,8 @@
     --bg-list-color: #253047;
     --bg-card-color: chartreuse;
     --border-color: #594ef7;
+    --table-tr-color: #eef0f3;
+    --thead-bg-color: #f9fafB;
 
 }
 
@@ -28,6 +30,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins';
+}
+
+a,p,h5{
+    margin-bottom: 0;
 }
 
 body{
@@ -62,6 +68,7 @@ body{
 
 #menu .items{
     margin-top: 0px;
+    height: 100%;
 }
 
 #menu .items li{
@@ -75,7 +82,7 @@ body{
     cursor: pointer;
 }
 
-#menu .items li:nth-child(1){
+#menu .items li.active{
     border-left: 4px solid #fff;
 }
 
@@ -101,6 +108,11 @@ body{
     transition: 0.3s ease;
 }
 
+#menu .items li#logout{
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+}
 /* sidebar end */
 
 #interface{
@@ -119,11 +131,16 @@ body{
     border-bottom: 3px solid var(--border-color);
     position: fixed;
     width: calc(100% - 300px);
+    z-index: 10;
 }
 
-/* #interface .navigation .title{
+#interface .navigation .title h3 span:first-child{
+    color: var(--green-zoe);
+}
 
-} */
+#interface .navigation .title h3 span:last-child{
+    color: var(--orange-zoe);
+}
 
 #interface .navigation .profile{
     display: flex;
@@ -198,14 +215,87 @@ body{
     color: var(--text-span-color);
 }
 
+.board{
+    width: 94%;
+    margin:30px 0 30px 30px;
+    overflow: auto;
+    background: #fff;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.board img{
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.board h5{
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.board p{
+    font-weight: 400;
+    font-size: 13px;
+    color: #787D8D;
+}
+
+.board .people{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+}
+
+table{
+    border-collapse: collapse;
+}
+
+tr{
+    border-bottom: 1px solid var(--table-tr-color);
+}
+
+thead td{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 400;
+    background: var(--thead-bg-color);
+    text-align: start;
+    padding: 15px;
+}
+
+tbody tr td{
+    padding: 10px 15px;
+}
+
+.board .active p{
+    background: #c4f8c8;
+    padding: 2px 10px;
+    display: inline-block;
+    border-radius: 40px;
+    color: #2B2B2B;
+}
+
+.board .edit a {
+    text-decoration: none;
+    font-size: 14px;
+    color: #554cd1;
+}
+
+
+
 .historique {
+    margin-top: 40px;
     margin-bottom: 20px;
 }
 
 .historique .table-responsive{
     background-color: #fff;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 @media (max-width:768px) {
@@ -250,6 +340,18 @@ body{
     #interface .navigation{
         width: 100%;
     }
+
+    .board{
+        width: 94%;
+        padding: 0;
+        overflow-x: auto;
+        margin: 30px auto;
+    }
+
+    table{
+        width: 100%;
+        border-collapse: collapse;
+    }
 }
 
 
@@ -257,104 +359,41 @@ body{
     #interface .navigation{
         padding: 15px;
     }
+
+    /* .board{
+        width: 90%;
+        padding: 0;
+        overflow-x: auto;
+    } */
 }
 
-/*-----------------
-	2. Table
------------------------*/
 
-.table-responsive {
-    white-space: nowrap;
-    width: 100%;
+/* @media (max-width:447px) {
+    .board{
+        width: 87%;
+        padding: 0;
+        overflow-x: auto;
+    }
+} */
+
+.pagination > .active > a, 
+.pagination > .active > a:focus,
+.pagination > .active > a:hover, 
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+	background-color: rgb(241, 96, 38);
+	border-color: rgb(241, 96, 38);
 }
-
-.table {
-    color: #333;
+.pagination > li > a, 
+.pagination > li > span {
+	color: rgb(241, 96, 38);
 }
-
-.table.table-white {
-    background-color: #fff;
+.page-link:hover {
+	color: rgb(241, 96, 38);
 }
-
-.table thead th {
-    font-weight: 500;
-    letter-spacing: 0.05em;
-}
-
-.table-striped>tbody>tr:nth-of-type(2n+1) {
-    background-color: #f6f6f6;
-}
-
-table.table td h2 {
-    display: inline-block;
-    font-size: inherit;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    vertical-align: middle;
-}
-
-table.table td h2.table-avatar {
-    align-items: center;
-    display: inline-flex;
-    font-size: inherit;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    vertical-align: middle;
-    white-space: nowrap;
-}
-
-table.table td h2.table-avatar.blue-link a {
-    color: #007bff;
-}
-
-table.table td h2 a {
-    color: #333;
-}
-
-table.table td h2 a:hover {
-    color: #f43b48;
-}
-
-table.table td h2 span {
-    color: #888;
-    display: block;
-    font-size: 12px;
-    margin-top: 3px;
-}
-
-table.dataTable {
-    margin-bottom: 15px !important;
-    margin-top: 15px !important;
-}
-
-.table-nowrap td,
-.table-nowrap th {
-    white-space: nowrap
-}
-
-.table-hover tbody tr:hover {
-    background-color: #f7f7f7;
-    color: #212529;
-}
-
-table.dataTable thead>tr>th.sorting_asc,
-table.dataTable thead>tr>th.sorting_desc,
-table.dataTable thead>tr>th.sorting,
-table.dataTable thead>tr>td.sorting_asc,
-table.dataTable thead>tr>td.sorting_desc,
-table.dataTable thead>tr>td.sorting {
-    padding-right: 30px !important;
-}
-
-.table.custom-table>tbody>tr>td,
-.table.custom-table>tbody>tr>th,
-.table.custom-table>tfoot>tr>td,
-.table.custom-table>tfoot>tr>th,
-.table.custom-table>thead>tr>td,
-.table.custom-table>thead>tr>th {
-    padding: 10px 20px !important;
+.page-link:focus {
+	box-shadow: unset;
 }
 
 .page-item.active .page-link {
