--- a/css/style.css
+++ b/css/style.css
@@ -1,159 +1,480 @@
-@font-face {
-    font-family: poppins;
-    src: url(../fonts/Poppins-Regular.ttf);
+:root {
+    --orange: rgb(247, 89, 16);
+    --orange-reverse: rgb(211, 73, 9);
+    --green: rgb(35, 247, 16);
+    --green-reverse: rgb(25, 168, 12);
 }
 
 @font-face {
-    font-family: bebas;
-    src: url(../fonts/bebasNeue/BebasNeue-Regular.ttf);
+    font-family: 'Noto sans';
+    src: url(../font/NotoSans/NotoSans-Regular.ttf);
+    /* src: url(../font/NotoSans/NotoSans-Black.ttf); */
+    /* src: url(../font/NotoSans/NotoSans-Bold.ttf); */
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: poppins;
+    font-family: 'Noto sans', sans-serif;
 }
 
 body {
-    background-color: #ccc;
-    overflow-x: hidden;
+    background: rgb(238, 237, 237);
 }
 
-a {
-    text-decoration: none;
-}
-
-/* Loader */
-.loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #fff;
-    z-index: 2000;
-    overflow-y: hidden;
-}
-
-.disppear {
-    animation: vanish 1s forwards;
-}
-
-@keyframes vanish {
-    100% {
-        opacity: 1;
-        visibility: hidden;
-    }
-}
 
 /* Menu de navigation */
-.menu {
-    background: rgb(255, 255, 255);
-    padding: 20px;
 
-}
-
-.nav-logo,
-.nav-logo:hover {
-    font-size: 32px;
-    font-family: bebas;
-    color: rgb(126, 245, 58);
-}
-
-.w-80 {
-    width: 80% !important;
-}
-
-.nav-list {
-    margin-right: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.nav-list .nav-link-zoe {
-    color: #111;
-    font-size: 18px;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
-}
-
-.nav-list .nav-link-zoe:hover,
-.nav-list .nav-link-zoe.active {
-    color: rgb(126, 245, 58);
-}
-
-
-/* Banniere */
-
-img.set-bg {
+.hero {
+    height: 100vh;
     width: 100%;
-    height: 450px;
-    /* background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; */
-    /* background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../img/slider/bus.jpg') no-repeat center center /cover; */
-
-
-}
-
-.banniere {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-    /* background-image: url('../img/slider/bus_2.jpg'); */
-    /* background-repeat: no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url(../img/ban.jpg);
     background-size: cover;
-    background-position: center; */
-    overflow-y: hidden;
+    background-position: center;
+}
+
+.hero nav .menu-toggle {
+    border: none;
+    color: var(--orange);
+    background: transparent;
+    border: 2px solid;
+    border-color: var(--orange);
+    padding: 10px;
+    font-size: 26px;
+    border-radius: 10px;
+    display: none;
 }
 
 
-.banniere .content .title .title-zoe {
-    color: rgb(126, 245, 58);
-    font-size: 50px;
-
-}
-
-.banniere .content .reservation {
+.hero nav {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    padding: 45px 8% 0 8%;
 }
 
-.banniere .content .reservation .title {
-    margin-top: 20px;
-    line-height: 1.5;
-    font-size: 36px;
-    font-weight: 600;
-    letter-spacing: 2px;
+.hero nav img.logo {
+    width: 80px;
+    height: 80px;
+}
+
+.hero nav ul {
+    margin-bottom: 0;
+}
+
+.hero nav ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 10px 25px;
+}
+
+.hero nav ul li a {
     color: #fff;
     text-decoration: none;
-    text-align: center;
-    /* cursor: pointer; */
-    user-select: none;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
-    transform: translateY(400%);
-    animation: fade-up 2.5s forwards;
+    font-weight: bold;
+    text-transform: capitalize;
+    padding-bottom: 10px;
 }
 
-@keyframes fade-up {
-    100% {
-        transform: translateY(0);
+.hero nav ul li a:hover {
+    color: var(--orange);
+    border-bottom: 2px solid var(--orange);
+    transition: 0.4s;
+}
+
+.hero nav .button {
+    background: var(--orange);
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 25px;
+    border-radius: 30px;
+    transition: transform .4s;
+}
+
+.hero nav .button:hover {
+    transform: scale(1.2);
+}
+
+.hero .content {
+    position: absolute;
+    top: 50%;
+    left: 8%;
+    transform: translateY(-50%);
+}
+
+.hero .content h1 {
+    color: #fff;
+    margin: 20px 0 20px;
+    font-size: 50px;
+    text-transform: capitalize;
+}
+
+.hero .content h1 span {
+    color: var(--green);
+}
+
+.hero .content h3 {
+    color: #fff;
+    margin-bottom: 30px;
+    font-size: 25px;
+}
+
+.hero .content a {
+    background: var(--orange);
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 25px;
+    border-radius: 30px;
+    transition: .4s ease;
+}
+
+.hero .content a:hover {
+    background: transparent;
+    border: 2px solid var(--orange);
+}
+
+.nav-mobile{
+    position:fixed;
+    top: 0;
+    right: 0;
+    width: 270px;
+    height: 100vh;
+    background: var(--orange-reverse);
+    padding: 20px 0;
+    z-index: 1000;
+    /* display: none; */
+}
+
+.nav-mobile .btn-close-menu{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+
+.nav-mobile .btn-close-menu button{
+    border: none;
+    background: transparent;
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+}
+
+.nav-mobile .menu-wrapper ul li{
+    padding: 10px 15px;
+    display: block;
+    list-style: none;
+    font-size: 18px;
+    margin: 30px 0;
+}
+
+.nav-mobile .menu-wrapper ul li:hover{
+    transition: .3s ease;
+    background-color: rgb(253, 133, 77);
+}
+
+.nav-mobile .menu-wrapper ul li a{
+    color: #fff;
+    text-decoration: none;
+}
+
+@media (min-width:860px) {
+    .nav-mobile{
+        display: none;
     }
 }
 
-.banniere .content .reservation .reservation-link:hover {
-    background-color: rgb(207, 64, 7);
+@media (max-width:860px) {
+
+    .hero nav .button,
+    .hero nav ul.menu-lg{
+        display: none;
+    }
+
+    .hero nav .menu-toggle{
+        display: block;
+        cursor: pointer;
+    }
+
+
+    .nav-mobile{
+        display: none;
+    }
+    .nav-mobile.active{
+        display: block;
+    }
+}
+
+@media (max-width:800px) {
+    .about .main{
+        display: block;
+    }
+}
+
+@media (min-width:850px) {
+    .loop #v1-loop {
+        width: 100%;
+        height: auto;
+    }
+    .service .box {
+        display: flex;
+    }
+    
+}
+
+@media (max-width:850px) {
+
+    .loop #v1-loop {
+        width: 100%;
+        height: 850px;
+        object-fit: cover;
+    }
+    
+
+    .service .box {
+        display: block;
+    }
+
+
+}
+
+/* A propos de zoe */
+
+.about {
+    width: 100%;
+    padding: 100px 0;
+    background-color: #fff;
+}
+
+.main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about .main img {
+    height: auto;
+    width: 430px;
+}
+
+.about .main .about-text {
+    width: 550px;
+}
+
+.about .main .about-text h2 {
+    color: var(--green);
+    font-size: 50px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about .main .about-text h5 {
+    letter-spacing: 2px;
+    font-size: 22px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+}
+
+.about .main .about-text h5 span:first-child {
+    color: var(--orange-reverse);
+}
+
+.about .main .about-text h5 span:last-child {
+    color: var(--green-reverse);
+}
+
+.about .main .about-text p {
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+    color: rgba(37, 35, 35, 0.8);
+}
+
+.about .main .about-text a {
+    background: var(--orange);
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 25px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+.about .main .about-text a:hover {
+    background: transparent;
+    border: 2px solid var(--orange);
+    color: rgba(37, 35, 35, 0.8);
+}
+
+
+/* loop */
+.loop{
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+.loop #v1-loop {
+    width: 100%;
+    /* height: auto; */
+}
+
+/* Services */
+.service {
+    position: absolute;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    /* width: 100%;
+    margin-top: 70px;
+    background-color: #fff;
+    padding: 50px 0; */
+}
+
+.service .title h2 {
+    color: #fff;
+    font-size: 50px;
+    /* width: 1130px; */
+    margin: 15px auto;
+    text-align: center;
+}
+
+.service .box {
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+}
+
+.service .box .card-box {
+    height: 370px;
+    width: 335px;
+    padding: 20px 35px;
+    background: rgb(192, 255, 187);
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.service .box .card-box i,
+.service .box .card-box svg {
+    font-size: 50px;
+    display: block;
+    text-align: center;
+    margin: 25px 0;
+    color: var(--orange);
+}
+
+.service .box .card-box h5 {
+    color: #000;
+    font-size: 23px;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+
+.service .box .card-box .pra p {
+    font-size: 16px;
+    line-height: 27px;
+    margin-bottom: 25px;
+    color: rgb(37, 35, 35);
+}
+
+.service .box .card-box .pra .button {
+    background: var(--orange);
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 9px 22px;
+    border-radius: 30px;
+    transition: transform .4s;
+}
+
+.service .box .card-box .pra .button:hover {
+    background: transparent;
+    border: 2px solid var(--orange);
+    color: rgba(37, 35, 35, 0.8);
+    cursor: pointer;
+}
+
+
+/* Nos destination */
+section.destination{
+    padding: 80px 30px;
+    background-color: #fff;
+}
+
+.destination .title h2 {
+    color: var(--green);
+    font-size: 50px;
+    /* width: 1130px; */
+    margin: 15px auto;
+    text-align: center;
+}
+.destination .destination-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(340px,auto));
+    grid-gap: 2rem;
+    align-items: center;
+    margin-top: 5rem;
+}
+
+.destination .destination-content .col-content{
+    position: relative;
+}
+
+.destination .destination-content .col-content img{
+    width:100%;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 15px;
+    filter: brightness(80%);
+    transition: all .3s cubic-bezier(.495,.05,.55,.95);
+    will-change: filter;
+}
+
+.destination .destination-content .col-content h5{
+    position: absolute;
+    font-size: 22px;
+    font-weight: 500;
+    color: #fff;
+    left: 15px;
+    bottom: 60px;
+}
+
+.destination .destination-content .col-content p{
+    position: absolute;
+    font-size: 15px;
+    color: #fff;
+    left: 15px;
+    bottom: 30px;
+    letter-spacing: 2px;
+}
+
+.destination .destination-content .col-content img:hover{
+    filter: brightness(100%) hue-rotate(45deg);
+    transform: scale(1.04);
+    cursor: pointer;
 }
 
 
 /* Footer */
+footer{
+    background-color: #fff;
+}
 
 .footer-title {
     color: rgb(126, 245, 58);
@@ -226,281 +547,6 @@ img.set-bg {
 
 .copyright p {
     font-size: 14px;
-}
-
-/* grille tarifaire */
-.main {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.main .title {
-    text-align: center;
-    font-size: 28px;
-    color: rgb(241, 96, 38);
-}
-
-.main .price {
-    margin-top: 20px;
-}
-
-.main .price .form form {
-    display: flex;
-    justify-content: center;
-}
-
-
-.main .price .form form .form-group select {
-    display: inline-block;
-    text-align: center;
-    background-color: #fff;
-    border: 3px solid rgb(241, 96, 38);
-    width: 240px;
-    height: 50px;
-    padding: 10px;
-    border-radius: 0;
-    outline: none;
-    resize: none;
-}
-
-.main .price .form form .form-submit button {
-    display: inline-block;
-    width: 120px;
-    height: 50px;
-    border: none;
-    background-color: rgb(241, 96, 38);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-}
-
-.main .price .form form .form-submit button:hover {
-    background-color: rgb(207, 64, 7);
-}
-
-@media (min-width: 576px) {
-    .main .price .form form .form-group select {
-        width: 350px;
-    }
-
-    .main .price .form form .form-submit button {
-        width: 200px;
-    }
-}
-
-.main .price .grid-price {
-    margin-top: 20px;
-}
-
-.main .price .grid-price .title-price {
-    margin: 10px auto;
-    text-align: center;
-    font-size: 22px;
-}
-
-.main .price .grid-price .city-dest {
-    margin: 10px auto;
-    padding: 15px;
-    background-color: #fff;
-    border-radius: 10px;
-    text-align: center;
-}
-
-.main .price .grid-price .city-dest img {
-    width: 100%;
-    height: 250px;
-    margin-bottom: 20px;
-}
-
-.main .price .grid-price .city-dest h4 a {
-    color: rgb(91, 211, 22);
-}
-
-.main .price .grid-price .city-dest h4 a:hover {
-    padding: 0 10px;
-    border-radius: 50px;
-    border: 2px solid rgb(66, 153, 15);
-    color: rgb(66, 153, 15);
-}
-
-/* Modal details voyage */
-.details-voyage img {
-    width: 100%;
-    height: 100%;
-}
-
-
-
-.details-voyage span {
-    color: rgb(91, 211, 22);
-}
-
-/* Modal login */
-
-.login .form-group label {
-    display: none;
-}
-
-.login .form-group input {
-    border: 2px solid rgb(241, 96, 38);
-    padding: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-    border-radius: 5px;
-    outline: none;
-}
-
-.login form .forgot {
-    text-align: right;
-}
-
-.login form .forgot a {
-    color: #221414;
-}
-
-.login form .forgot a:hover {
-    color: rgb(91, 211, 22);
-}
-
-
-.login .form-submit {
-    display: flex;
-    justify-content: center;
-}
-
-.login .form-submit button {
-    display: inline-block;
-    width: 200px;
-    height: 50px;
-    border: none;
-    background-color: rgb(241, 96, 38);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    margin-top: 15px;
-}
-
-.login .form-submit button:hover {
-    background-color: rgb(207, 64, 7);
-}
-
-.login .form-submit button i {
-    margin-left: 5px;
-}
-
-
-/* Modal register */
-
-.register .form-group label {
-    display: none;
-}
-
-.register .form-group input {
-    border: 2px solid rgb(241, 96, 38);
-    padding: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-    border-radius: 5px;
-    outline: none;
-}
-
-.register form .forgot {
-    text-align: right;
-}
-
-.register form .forgot a {
-    color: #221414;
-}
-
-.register form .forgot a:hover {
-    color: rgb(91, 211, 22);
-}
-
-
-.register .form-submit {
-    display: flex;
-    justify-content: center;
-}
-
-.register .form-submit button {
-    display: inline-block;
-    width: 200px;
-    height: 50px;
-    border: none;
-    background-color: rgb(241, 96, 38);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    margin-top: 15px;
-}
-
-.register .form-submit button:hover {
-    background-color: rgb(207, 64, 7);
-}
-
-.register .form-submit button i {
-    margin-left: 5px;
-}
-
-
-/* Modal reserved */
-
-.ticket .form-group {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.ticket .form-group label {
-    margin-bottom: 10px;
-}
-
-.ticket .form-group select,
-.ticket .form-group input {
-    background-color: #fff;
-    border: 2px solid rgb(241, 96, 38);
-    padding: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-    border-radius: 5px;
-    outline: none;
-}
-
-.ticket form .forgot {
-    text-align: right;
-}
-
-.ticket form .forgot a {
-    color: #221414;
-}
-
-.ticket form .forgot a:hover {
-    color: rgb(91, 211, 22);
-}
-
-
-.ticket .form-submit {
-    display: flex;
-    justify-content: center;
-}
-
-.ticket .form-submit button {
-    display: inline-block;
-    width: 200px;
-    height: 50px;
-    border: none;
-    background-color: rgb(241, 96, 38);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    margin-top: 15px;
-}
-
-.ticket .form-submit button:hover {
-    background-color: rgb(207, 64, 7);
-}
-
-.ticket .form-submit button i {
-    margin-left: 5px;
 }
 
 /* Contact */
