--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,132 @@ footer{
     font-size: 14px;
 }
 
+/* Espaces authentification */
+.auth-a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.auth-a .content{
+    max-width: 500px;
+    width: 95%;
+}
+
+.auth-a .content h3{
+    font-size: 38px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.auth-a .content .form-auth{
+    display: block;
+    padding: 15px 20px;
+    background: #fff;
+    border-radius: 15px;
+}
+
+.auth-a .content .form-auth h5{
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.auth-a .content .form-auth .form-group{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.auth-a .content .form-auth .form-group label{
+    margin-bottom: 10px;
+    font-size: 17px;
+}
+
+.auth-a .content .form-auth .form-group input{
+    border: 2px solid rgb(111, 253, 106);
+    border-radius: 10px;
+    height: 45px;
+    font-size: 17px;
+    padding: 10px 15px;
+    outline: none;
+}
+
+.auth-a .content .form-auth .forgot-pwd{
+    text-align: end;
+    margin-bottom: 20px;
+}
+
+.auth-a .content .form-auth .forgot-pwd a{
+    text-decoration: none;
+    color: #363232;
+    font-size: 16px;
+}
+
+.auth-a .content .form-auth .forgot-pwd a:hover{
+    text-decoration: underline;
+}
+
+.auth-a .content .form-auth .form-submit{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.auth-a .content .form-auth .form-submit button{
+    width: 50%;
+    padding: 10px 20px;
+    border: none;
+    background-color: rgba(111, 253, 106, 0.616);
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: rgb(4, 73, 2);
+}
+
+.auth-a .content .form-auth .signup-link{
+    text-align: center;
+}
+
+.auth-a .content .form-auth .signup-link a{
+    color: rgb(16, 108, 245);
+    font-weight: 600;
+}
+
+.auth-a .content .form-auth .user_pic{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.auth-a .content .form-auth .user_pic img{
+    width: 150px;
+    height: 150px;
+    border: 2px solid rgba(16, 108, 245, 0.521);
+    padding: 5px;
+    border-radius: 50%;
+
+}
+
+.auth-a .content .form-auth .user_pic label{
+    position: absolute;
+    font-size: 30px;
+    background-color: #ccc;
+    padding: 10px ;
+    border-radius: 50%;
+    color: rgb(255, 254, 254);
+    opacity: .6;
+    /* bottom: -15px;
+    right: 150px; */
+}
+
+
+.auth-a .content .form-auth .user_pic input{
+    display: none;
+}
+
 /* Contact */
 .contact .title {
     font-size: 28px;
